fix(about): fixed personal image spacing

--- a/static/css/hugo-markdown.css
+++ b/static/css/hugo-markdown.css
@@ -20,13 +20,7 @@
   height: var(--size-lg);
 }
 
-@media screen and (max-width: 1024px) {
-  :root {
-    --size-sm: 100px;
-    --size-md: 200px;
-    --size-lg: 400px;
-  }
-}
+
 
 /* Float images */
 .hugo-content .float-left {
@@ -35,14 +29,6 @@
 
 .hugo-content .float-right {
   float: right;
-}
-
-@media screen and (max-width: 1024px) {
-  .float-left, .float-right {
-    float: initial;
-    width: 100%;
-    height: 100%;
-  }
 }
 
 /* Default margins */
@@ -97,4 +83,18 @@
   height: 18px;
   margin: initial;
   margin-right: .7rem;
+}
+
+@media screen and (max-width: 1024px) {
+  :root {
+    --size-sm: 100px;
+    --size-md: 200px;
+    --size-lg: 400px;
+  }
+
+  .hugo-content .float-left, .hugo-content .float-right {
+    float: initial;
+    width: 100%;
+    height: 100%;
+  }
 }
